trunk/plugins/abc/abcp-0.1a/abcplib/src/abcptempo.c
/* Generated by re2c 0.5 on Fri Dec 31 13:56:17 2004 */
#line 1 "abcptempo.re"
#include "abcp.h"

/*
           1         2
 012345678901234567890123456789
 QESSxxN1D1N2D2N3D3N4D4CCLLll
                   \    \ \___  <num>
                        \____   
                         
 Q: [1/8 [2/8 [ 3/8 [4/8]]] =] <num>] ["string"] 
 Q: ["string"] [1/8 [2/8 [ 3/8 [4/8]]] =] <num>]
 Q: C<num0>=<num1>
 
 
*/

#line 24


/*
  0 = OK
  1 = integer (no den!)
  2 = not a number!
*/

int getfrac(YYCTYPE **str,int *num, int *den)
{
  YYCTYPE *YYCURSOR;
  int ret=2;
  
  YYCURSOR = *str;
  
  *num=0; *den=1;
  
  skipspace(YYCURSOR);  
  if (isdigit(*YYCURSOR)) {
    while (isdigit(*YYCURSOR))
      *num = *num * 10 + (*YYCURSOR++ - '0');
    ret=1;
  
    skipspace(YYCURSOR);
    if (*YYCURSOR == '/') {
      *den=0;
      YYCURSOR++;
      skipspace(YYCURSOR);
      while (isdigit(*YYCURSOR))
        *den = *den * 10 + (*YYCURSOR++ - '0');
      ret=0;
      skipspace(YYCURSOR);
    }
  }
  *str = YYCURSOR;   
  return ret;
}

char *abcNTempo(char *pak, char *str)
{
  char *t=NULL;
  char c;
  int m,n,d;
  
  YYCTYPE *YYCURSOR,*YYLIMIT,*YYMARKER,*YYSTART;

  if (str==NULL || pak==NULL) return NULL;
  
  YYCURSOR=str; skipspace(YYCURSOR);
  YYLIMIT=str;  while (*YYLIMIT) YYLIMIT++;
    
             /*012345678901234567890123456789*/
  setpack(pak,"QESSxxN1D1N2D2N3D3N4D4CCLLll");

  STATE(tempo) {
    {
	YYCTYPE yych;
	unsigned int yyaccept;
	goto yy0;
yy1:	++YYCURSOR;
yy0:
	if(YYLIMIT == YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	if(yych <= '/'){
		if(yych == '"')	goto yy6;
		goto yy8;
	} else {
		if(yych <= '9')	goto yy4;
		if(yych != 'C')	goto yy8;
		goto yy2;
	}
yy2:	yych = *++YYCURSOR;
	goto yy3;
yy3:
#line 80
	{ GOTO(common); }
yy4:	yych = *++YYCURSOR;
	goto yy5;
yy5:
#line 81
	{ YYCURSOR-- ; GOTO(beats); }
yy6:	yych = *++YYCURSOR;
	goto yy7;
yy7:
#line 82
	{ GOTO (string); }
yy8:	yych = *++YYCURSOR;
	goto yy9;
yy9:
#line 83
	{ setperr(pak,1); GOTO(done); }
}
#line 84

  }

  STATE(common) {
    m=0;
    STATE(num) {
      {
	YYCTYPE yych;
	unsigned int yyaccept;
	goto yy10;
yy11:	++YYCURSOR;
yy10:
	if((YYLIMIT - YYCURSOR) < 2) YYFILL(2);
	yych = *YYCURSOR;
	if(yych <= ' '){
		if(yych <= '\n'){
			if(yych <= '\000')	goto yy18;
			if(yych <= '\b')	goto yy22;
			goto yy14;
		} else {
			if(yych == '\r')	goto yy14;
			if(yych <= '\037')	goto yy22;
			goto yy14;
		}
	} else {
		if(yych <= '/'){
			if(yych == '"')	goto yy20;
			goto yy22;
		} else {
			if(yych <= '9')	goto yy12;
			if(yych == '=')	goto yy16;
			goto yy22;
		}
	}
yy12:	yych = *++YYCURSOR;
	goto yy13;
yy13:
#line 91
	{ m=(m*10) + (YYCURSOR[-1] -'0'); GOTO(num); }
yy14:	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	if(yych <= '\037'){
		if(yych <= '\n'){
			if(yych <= '\000')	goto yy29;
			if(yych >= '\t')	goto yy26;
			goto yy15;
		} else {
			if(yych == '\r')	goto yy26;
			goto yy15;
		}
	} else {
		if(yych <= '"'){
			if(yych <= ' ')	goto yy26;
			if(yych >= '"')	goto yy25;
			goto yy15;
		} else {
			if(yych == '=')	goto yy23;
			goto yy15;
		}
	}
yy15:
#line 95
	{ setperr(pak,3); GOTO(done); }
yy16:	yych = *++YYCURSOR;
	goto yy24;
yy17:
#line 92
	{ sethex(pak+22,m); GOTO(common); }
yy18:	yych = *++YYCURSOR;
	goto yy19;
yy19:
#line 93
	{ sethex(pak+24,m); GOTO(done); }
yy20:	yych = *++YYCURSOR;
	goto yy21;
yy21:
#line 94
	{ sethex(pak+24,m); GOTO(string); }
yy22:	yych = *++YYCURSOR;
	goto yy15;
yy23:	++YYCURSOR;
	if(YYLIMIT == YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	goto yy24;
yy24:	if(yych <= '\f'){
		if(yych <= '\b')	goto yy17;
		if(yych <= '\n')	goto yy23;
		goto yy17;
	} else {
		if(yych <= '\r')	goto yy23;
		if(yych == ' ')	goto yy23;
		goto yy17;
	}
yy25:	yych = *++YYCURSOR;
	goto yy21;
yy26:	++YYCURSOR;
	if(YYLIMIT == YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	goto yy27;
yy27:	if(yych <= '\037'){
		if(yych <= '\n'){
			if(yych <= '\000')	goto yy29;
			if(yych >= '\t')	goto yy26;
			goto yy28;
		} else {
			if(yych == '\r')	goto yy26;
			goto yy28;
		}
	} else {
		if(yych <= '"'){
			if(yych <= ' ')	goto yy26;
			if(yych >= '"')	goto yy25;
			goto yy28;
		} else {
			if(yych == '=')	goto yy23;
			goto yy28;
		}
	}
yy28:	YYCURSOR = YYMARKER;
	switch(yyaccept){
	case 0:	goto yy15;
	}
yy29:	yych = *++YYCURSOR;
	goto yy19;
}
#line 96

    }
  }

  STATE(waitstring) {
    {
	YYCTYPE yych;
	unsigned int yyaccept;
	goto yy30;
yy31:	++YYCURSOR;
yy30:
	if((YYLIMIT - YYCURSOR) < 2) YYFILL(2);
	yych = *YYCURSOR;
	if(yych <= '\r'){
		if(yych <= '\b'){
			if(yych <= '\000')	goto yy36;
			goto yy38;
		} else {
			if(yych <= '\n')	goto yy32;
			if(yych <= '\f')	goto yy38;
			goto yy32;
		}
	} else {
		if(yych <= ' '){
			if(yych <= '\037')	goto yy38;
			goto yy32;
		} else {
			if(yych == '"')	goto yy34;
			goto yy38;
		}
	}
yy32:	yych = *++YYCURSOR;
	goto yy41;
yy33:
#line 102
	{ GOTO(waitstring); }
yy34:	yych = *++YYCURSOR;
	goto yy35;
yy35:
#line 103
	{ GOTO(string); }
yy36:	yych = *++YYCURSOR;
	goto yy37;
yy37:
#line 104
	{ GOTO(done); }
yy38:	yych = *++YYCURSOR;
	goto yy39;
yy39:
#line 105
	{ setperr(pak,3); GOTO(done); }
yy40:	++YYCURSOR;
	if(YYLIMIT == YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	goto yy41;
yy41:	if(yych <= '\f'){
		if(yych <= '\b')	goto yy33;
		if(yych <= '\n')	goto yy40;
		goto yy33;
	} else {
		if(yych <= '\r')	goto yy40;
		if(yych == ' ')	goto yy40;
		goto yy33;
	}
}
#line 106

  }
      
  STATE(string) {
    YYSTART=YYCURSOR;
    /*printf("%s\n",YYCURSOR); */
    STATE(str) {
      {
	YYCTYPE yych;
	unsigned int yyaccept;
	goto yy42;
yy43:	++YYCURSOR;
yy42:
	if((YYLIMIT - YYCURSOR) < 2) YYFILL(2);
	yych = *YYCURSOR;
	if(yych <= '"'){
		if(yych <= '\000')	goto yy46;
		if(yych <= '!')	goto yy50;
		goto yy48;
	} else {
		if(yych != '\\')	goto yy50;
		goto yy44;
	}
yy44:	yych = *++YYCURSOR;
	goto yy51;
yy45:
#line 121
	{ GOTO(str); }
yy46:	yych = *++YYCURSOR;
	goto yy47;
yy47:
#line 116
	{ YYCURSOR--; GOTO(done); }
yy48:	yych = *++YYCURSOR;
	goto yy49;
yy49:
#line 118
	{ sethex(pak+2,(char *)YYSTART-str);
                      sethex(pak+4,YYCURSOR-YYSTART);
                      GOTO(beats); }
yy50:	yych = *++YYCURSOR;
	goto yy45;
yy51:	yych = *++YYCURSOR;
	goto yy52;
yy52:
#line 114
	{ GOTO(str); }
}
#line 122

    }
  }
  
  STATE(beats) {
    t=pak+6;
    
    STATE(beat) {
      m=getfrac(&YYCURSOR,&n,&d);
      if (m == 0) {
        sethex(t,n);
        sethex(t+2,d);
        t += 4;
        if (t>pak+20) GOTO(waitbeatnum);
        GOTO(beat);
      }
      if (m == 1) {
        sethex(pak+24,n);
        GOTO(waitstring);
      }
      /*printf("%d,%s\n",m,YYCURSOR);*/
      if (m == 2) {
        if (*YYCURSOR == '=') {
          YYCURSOR++;
          GOTO(beatnum);
        }
        if (*YYCURSOR == '"')  {
          YYCURSOR++;
          GOTO(string);
        }
        
        if (*YYCURSOR == '\0') GOTO(done);
      }
      setperr(pak,4);
      GOTO(done);
    }
  }

  STATE(waitbeatnum) {
    {
	YYCTYPE yych;
	unsigned int yyaccept;
	goto yy53;
yy54:	++YYCURSOR;
yy53:
	if((YYLIMIT - YYCURSOR) < 2) YYFILL(2);
	yych = *YYCURSOR;
	if(yych <= '\037'){
		if(yych <= '\n'){
			if(yych <= '\000')	goto yy57;
			if(yych <= '\b')	goto yy63;
			goto yy55;
		} else {
			if(yych != '\r')	goto yy63;
			goto yy55;
		}
	} else {
		if(yych <= '9'){
			if(yych <= ' ')	goto yy55;
			if(yych <= '/')	goto yy63;
			goto yy61;
		} else {
			if(yych == '=')	goto yy59;
			goto yy63;
		}
	}
yy55:	yych = *++YYCURSOR;
	goto yy66;
yy56:
#line 162
	{ GOTO(waitbeatnum); }
yy57:	yych = *++YYCURSOR;
	goto yy58;
yy58:
#line 163
	{ GOTO(done); }
yy59:	yych = *++YYCURSOR;
	goto yy60;
yy60:
#line 164
	{ GOTO(waitbeatnum); }
yy61:	yych = *++YYCURSOR;
	goto yy62;
yy62:
#line 165
	{ YYCURSOR-- ; GOTO(beatnum); }
yy63:	yych = *++YYCURSOR;
	goto yy64;
yy64:
#line 166
	{ setperr(pak,3); GOTO(done); }
yy65:	++YYCURSOR;
	if(YYLIMIT == YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	goto yy66;
yy66:	if(yych <= '\f'){
		if(yych <= '\b')	goto yy56;
		if(yych <= '\n')	goto yy65;
		goto yy56;
	} else {
		if(yych <= '\r')	goto yy65;
		if(yych == ' ')	goto yy65;
		goto yy56;
	}
}
#line 167

  }
    
  STATE(beatnum) {
    m=getfrac(&YYCURSOR,&n,&d);
    if (m < 2) {
      sethex(pak+24,n);
      sethex(pak+26,d);
    }
    else 
      setperr(pak,4);
    GOTO(waitstring);  
  }
  
  STATE(done)
    return pak;
}

